--- a/SADENTv202302.02.3/assets/mobirise/css/mbr-additional.css
+++ b/SADENTv202302.02.3/assets/mobirise/css/mbr-additional.css
@@ -1050,10 +1050,6 @@ a {
     left: -1rem;
   }
 }
-.cid-txUMahNWvc {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
 .cid-txUMahNWvc .mbr-fallback-image.disabled {
   display: none;
 }
@@ -1065,7 +1061,7 @@ a {
   height: 100%;
   position: absolute;
   top: 0;
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/we-respect-your-choice-402x268.jpeg");
 }
 .cid-txUMahNWvc .mbr-section-title {
   color: #000000;
@@ -3576,7 +3572,7 @@ a {
   }
 }
 .cid-txTzlEQbwg {
-  padding-top: 3rem;
+  padding-top: 5rem;
   padding-bottom: 1rem;
   background-color: #e3f6ff;
 }
